--- a/pom.xml
+++ b/pom.xml
@@ -85,5 +85,12 @@
             <version>1.7.32</version>
         </dependency>
 
+        <!-- Apache POI - Excel -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
     </dependencies>
 </project>
