--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
                     <useUnlimitedThreads>true</useUnlimitedThreads>
           -->
                     <threadCount>3</threadCount>
-                    <perCoreThreadCount>false</perCoreThreadCount>
+                    <perCoreThreadCount>true</perCoreThreadCount>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/CukesRunner*.java</include>
